netcourse/frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netcourse-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netcourse-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: netcourse-frontend
    spec:
      containers:
      - env:
        - name: NUXT_PUBLIC_API_BASE
          value: /api
        image: ghcr.io/hadcrab/netcourse-frontend:latest
        imagePullPolicy: Always
        name: netcourse-frontend
        ports:
        - containerPort: 3000
          protocol: TCP
      imagePullSecrets:
      - name: ghcr-pull
