netcourse/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: netcourse-frontend
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: netcourse-frontend
  type: ClusterIP
